Added edit functionality

--- a/www/tareas/index.html
+++ b/www/tareas/index.html
@@ -8,13 +8,12 @@
     <title>Tasker</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <!-- <script src="js/tasker.js"></script> -->
 </head>
 
 <body>
     <h1>Web Tasker</h1>
     <form action="/" method="post">
-        <div>
+        <div id="btnDiv">
             <input type="hidden" name="arrayid" value="[arrayid]">
             <input required type="text" name="user" id="user_input" placeholder="Username">
             <input required type="text" name="task" id="task_input" placeholder="Task name">
